--- a/SCAIS/SCAIS.csproj
+++ b/SCAIS/SCAIS.csproj
@@ -68,11 +68,11 @@
     <Compile Include="Corequisite.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Enrollment.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="login.Designer.cs">
+      <DependentUpon>login.cs</DependentUpon>
     </Compile>
     <Compile Include="frmAdmin.cs">
       <SubType>Form</SubType>
@@ -106,8 +106,8 @@
     <Compile Include="Specialization.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="User.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="login.resx">
+      <DependentUpon>login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -143,6 +143,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CheckLastLogin.sql" />
     <Content Include="SCAISDB.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
