fix database being deplicated when build

--- a/SCAIS/App.config
+++ b/SCAIS/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="SCAIS.Properties.Settings.SCAISDBConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SCAISDB.mdf;Integrated Security=True;Connect Timeout=30"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ahmed-pc\Documents\SCAIS\SCAIS\SCAISDB.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
