--- a/SCAIS/App.config
+++ b/SCAIS/App.config
@@ -2,12 +2,13 @@
 <configuration>
     <configSections>
     </configSections>
-    <connectionStrings>
-        <add name="SCAIS.Properties.Settings.SCAISDBConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ahmed-pc\Documents\SCAIS\SCAIS\SCAISDB.mdf;Integrated Security=True;Connect Timeout=30"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
-    <startup> 
+	<connectionStrings>
+		<add name="SCAIS.Properties.Settings.SCAISDBConnectionString"
+			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SCAISDB.mdf;Integrated Security=True;Connect Timeout=30"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
+	<startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 </configuration>
