--- a/SCAIS/SCAIS.csproj
+++ b/SCAIS/SCAIS.csproj
@@ -106,6 +106,9 @@
     <Compile Include="Specialization.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="frmAdviser.resx">
+      <DependentUpon>frmAdviser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
     </EmbeddedResource>
