feat(student): redesign student dashboard to match adviser UI and complete student features

--- a/SCAIS/SCAIS.csproj
+++ b/SCAIS/SCAIS.csproj
@@ -111,6 +111,9 @@
     <EmbeddedResource Include="frmAdviser.resx">
       <DependentUpon>frmAdviser.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmStudent.resx">
+      <DependentUpon>frmStudent.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
     </EmbeddedResource>
