--- a/SCAIS/SCAIS.csproj
+++ b/SCAIS/SCAIS.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -70,17 +70,17 @@
     <Compile Include="Corequisite.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Enrollment.cs" />
-    <Compile Include="login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="login.Designer.cs">
-      <DependentUpon>login.cs</DependentUpon>
-    </Compile>
     <Compile Include="frmAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmAdmin.Designer.cs">
       <DependentUpon>frmAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="login.Designer.cs">
+      <DependentUpon>login.cs</DependentUpon>
     </Compile>
     <Compile Include="frmAdviser.cs">
       <SubType>Form</SubType>
@@ -108,6 +108,9 @@
     <Compile Include="Specialization.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="frmAdmin.resx">
+      <DependentUpon>frmAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAdviser.resx">
       <DependentUpon>frmAdviser.cs</DependentUpon>
     </EmbeddedResource>
@@ -153,11 +156,7 @@
   <ItemGroup>
     <Content Include="CheckLastLogin.sql" />
     <Content Include="SCAISDB.mdf">
-      <CopyToOutputDirectory>DoNotCopy</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SCAISDB_log.ldf">
-      <CopyToOutputDirectory>DoNotCopy</CopyToOutputDirectory>
-      <DependentUpon>SCAISDB.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
