--- a/SCAIS/SCAIS.csproj
+++ b/SCAIS/SCAIS.csproj
@@ -158,6 +158,10 @@
     <Content Include="SCAISDB.mdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="SCAISDB_log.ldf">
+      <DependentUpon>SCAISDB.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.8">
