fix: make navbar and logout design same as adviser page

--- a/SCAIS/SCAIS.csproj
+++ b/SCAIS/SCAIS.csproj
@@ -160,7 +160,7 @@
     </Content>
     <Content Include="SCAISDB_log.ldf">
       <DependentUpon>SCAISDB.mdf</DependentUpon>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
