--- a/SCAIS/App.config
+++ b/SCAIS/App.config
@@ -3,8 +3,9 @@
     <configSections>
     </configSections>
 	<connectionStrings>
+		<!-- Database stored in project root folder - changes persist here -->
 		<add name="SCAIS.Properties.Settings.SCAISDBConnectionString"
-			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SCAISDB.mdf;Integrated Security=True;Connect Timeout=30"
+			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ahmed-pc\Documents\SCAIS\SCAIS\SCAISDB.mdf;Integrated Security=True;Connect Timeout=30"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
