--- a/SCAIS/SCAIS.csproj
+++ b/SCAIS/SCAIS.csproj
@@ -82,6 +82,12 @@
     <Compile Include="frmAdviser.Designer.cs">
       <DependentUpon>frmAdviser.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmEditCourse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEditStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="login.cs">
       <SubType>Form</SubType>
     </Compile>
