--- a/SCAIS/SCAIS.csproj
+++ b/SCAIS/SCAIS.csproj
@@ -70,6 +70,9 @@
     <Compile Include="Corequisite.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Enrollment.cs" />
+    <Compile Include="EnrollmentBuilder.cs" />
+    <Compile Include="EnrollmentDirector.cs" />
+    <Compile Include="EnrollmentService.cs" />
     <Compile Include="frmAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +91,7 @@
     <Compile Include="frmEditStudent.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="IEnrollmentBuilder.cs" />
     <Compile Include="login.cs">
       <SubType>Form</SubType>
     </Compile>
